--- a/document/references.bib
+++ b/document/references.bib
@@ -38,3 +38,66 @@
   author = {Schweer Werner and Froment Nicholas and Thomas Bonte},
   year = {2019},
 }
+@Article{bestMusicCurriculaFuture1992,
+  title = {Music {{Curricula}} in the {{Future}}},
+  volume = {94},
+  issn = {1063-2913, 1940-4395},
+  doi = {10.1080/10632913.1992.9936901},
+  language = {en},
+  number = {2},
+  journal = {Arts Education Policy Review},
+  author = {Harold M. Best},
+  month = {dec},
+  year = {1992},
+  pages = {2-7},
+}
+@Article{harrisonInstantaneousConsonancePerception,
+  title = {Instantaneous Consonance in the Perception and Composition of {{Western}} Music},
+  doi = {10.31234/osf.io/6jsug},
+  abstract = {Instantaneous consonance is a salient perceptual phenomenon corresponding to the perceived pleasantness of simultaneously sounding musical notes. Various competing theories of consonance have been proposed over the centuries, but recently a consensus has developed that consonance is primarily driven by periodicity perception. Here we question this view, substantiating our argument by critically reviewing historic consonance research from a broad variety of disciplines, re-analyzing consonance perception data from four previous behavioral studies representing more than 500 participants, and modeling three Western musical corpora representing more than 100,000 compositions. We conclude that consonance is a composite phenomenon that derives in large part from three phenomena: spectral interference, periodicity, and cultural familiarity. We formalize this conclusion with a computational model that predicts a musical chord's perceptual consonance from these three features, and release this model in an open-source R package, incon, alongside 15 other computational models also evaluated in this paper. We hope that this package will facilitate further psychological and musicological research into instantaneous consonance.},
+  author = {Peter Harrison and Marcus Thomas Pearce},
+  file = {/Users/davidjohnbaker/Zotero/storage/K8HQR3EF/Harrison and Pearce - Instantaneous consonance in the perception and com.pdf},
+}
+@Article{conklinMultipleViewpointSystems1995,
+  title = {Multiple Viewpoint Systems for Music Prediction},
+  volume = {24},
+  issn = {0929-8215, 1744-5027},
+  doi = {10.1080/09298219508570672},
+  abstract = {This paper examines the prediction and generation of music using a multiple viewpoint system, a collection of independent views of the musical surface each of which models a specific type of musical phenomena. Both the general style and a particular piece are modeled using dual short-term and long-term theories, and the model is created using machine learning techniques on a corpus of musical examples.},
+  language = {en},
+  number = {1},
+  journal = {Journal of New Music Research},
+  author = {Darrell Conklin and Ian H. Witten},
+  month = {mar},
+  year = {1995},
+  pages = {51-73},
+  file = {/Users/davidjohnbaker/Zotero/storage/3H4B74DX/Conklin and Witten - 1995 - Multiple viewpoint systems for music prediction.pdf},
+}
+@Article{conklinMultipleViewpointSystems1995,
+  title = {Multiple Viewpoint Systems for Music Prediction},
+  volume = {24},
+  issn = {0929-8215, 1744-5027},
+  doi = {10.1080/09298219508570672},
+  abstract = {This paper examines the prediction and generation of music using a multiple viewpoint system, a collection of independent views of the musical surface each of which models a specific type of musical phenomena. Both the general style and a particular piece are modeled using dual short-term and long-term theories, and the model is created using machine learning techniques on a corpus of musical examples.},
+  language = {en},
+  number = {1},
+  journal = {Journal of New Music Research},
+  author = {Darrell Conklin and Ian H. Witten},
+  month = {mar},
+  year = {1995},
+  pages = {51-73},
+  file = {/Users/davidjohnbaker/Zotero/storage/3H4B74DX/Conklin and Witten - 1995 - Multiple viewpoint systems for music prediction.pdf},
+}
+@Article{shepardMentalRotationThreeDimensional1971,
+  title = {Mental {{Rotation}} of {{Three}}-{{Dimensional Objects}}},
+  volume = {171},
+  issn = {0036-8075, 1095-9203},
+  doi = {10.1126/science.171.3972.701},
+  language = {en},
+  number = {3972},
+  journal = {Science},
+  author = {R. N. Shepard and J. Metzler},
+  month = {feb},
+  year = {1971},
+  pages = {701-703},
+}
